[gd_scene load_steps=13 format=3 uid="uid://bdupkh0grwy27"]

[ext_resource type="PackedScene" uid="uid://lqyku5wn2wo0" path="res://scenes/player/movement_controller.tscn" id="1_t1jcr"]
[ext_resource type="PackedScene" uid="uid://b8drbos167vf8" path="res://scenes/player/head.tscn" id="2_41iu1"]
[ext_resource type="Script" path="res://scripts/player/sprint.gd" id="3_bgqcu"]
[ext_resource type="Script" path="res://scripts/player/interact_ray.gd" id="3_k3k2m"]
[ext_resource type="Script" path="res://scripts/player/inventory.gd" id="4_2u4j3"]
[ext_resource type="PackedScene" uid="uid://c4k6dgybts0a2" path="res://scenes/item/accessory/mesh/crowbar.tscn" id="5_l8bye"]
[ext_resource type="PackedScene" uid="uid://bos5kdxse876b" path="res://scenes/item/accessory/mesh/flashlight.tscn" id="6_co2ur"]
[ext_resource type="PackedScene" uid="uid://b580a8bk8iux5" path="res://scenes/item/accessory/mesh/fuse.tscn" id="7_hm5m3"]
[ext_resource type="PackedScene" uid="uid://c2vreol3ncw80" path="res://scenes/item/accessory/mesh/tire.tscn" id="8_exj74"]
[ext_resource type="Script" path="res://scripts/player/footsteep.gd" id="10_jo4mt"]
[ext_resource type="Shader" path="res://shaders/vignette.gdshader" id="11_rslcb"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_4tm5b"]
shader = ExtResource("11_rslcb")
shader_parameter/alpha = 0.0
shader_parameter/inner_radius = 0.0
shader_parameter/outer_radius = 1.0

[node name="Player" groups=["player"] instance=ExtResource("1_t1jcr")]
collision_mask = 7

[node name="Head" parent="." index="1" instance=ExtResource("2_41iu1")]

[node name="InteractRay" type="RayCast3D" parent="Head" index="1"]
target_position = Vector3(0, 0, -4)
script = ExtResource("3_k3k2m")

[node name="TextureRect" type="TextureRect" parent="Head/InteractRay" index="0"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -32.0
offset_top = -32.0
offset_right = 32.0
offset_bottom = 32.0
grow_horizontal = 2
grow_vertical = 2
expand_mode = 1

[node name="Foot" type="RayCast3D" parent="Head" index="2"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, -1, 0)
target_position = Vector3(0, 0, -2)

[node name="Inventory" type="Node3D" parent="Head" index="3"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.64, 0)
script = ExtResource("4_2u4j3")

[node name="CrowbarMesh" parent="Head/Inventory" index="0" instance=ExtResource("5_l8bye")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 0.775, 0, -1)
visible = false

[node name="FlashlightMesh" parent="Head/Inventory" index="1" instance=ExtResource("6_co2ur")]
transform = Transform3D(0.2, 0, 0, 0, -8.74228e-09, -0.2, 0, 0.2, -8.74228e-09, 1, 0, -1)
visible = false

[node name="FuseMesh" parent="Head/Inventory" index="2" instance=ExtResource("7_hm5m3")]
transform = Transform3D(2, 0, 0, 0, 2, 0, 0, 0, 2, 0.775, 0, -1)
visible = false

[node name="TireMesh" parent="Head/Inventory" index="3" instance=ExtResource("8_exj74")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 1, 0, -1)
visible = false

[node name="Sprint" type="Node" parent="." index="2"]
script = ExtResource("3_bgqcu")

[node name="FootstepComponent" type="Node" parent="." index="3"]
script = ExtResource("10_jo4mt")
feet_path = NodePath("../Head/Foot")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="FootstepComponent" index="0"]
bus = &"SFX"

[node name="Vignette" type="Node" parent="." index="4"]

[node name="CanvasLayer" type="CanvasLayer" parent="Vignette" index="0"]

[node name="ColorRect" type="ColorRect" parent="Vignette/CanvasLayer" index="0"]
material = SubResource("ShaderMaterial_4tm5b")
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
